Added api flask

--- a/ToDo app/src/index.css
+++ b/ToDo app/src/index.css
@@ -4,11 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6, label{
   @apply font-poppins;
 }
 
-p, a, span, li {
+p, a, span, li, input, textarea, button{
   @apply font-lato;
 }
 
