--- a/React Flow Logic Gates/src/index.css
+++ b/React Flow Logic Gates/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities{
+    .handle{
+        @apply absolute p-1 border-none;
+    }
+    .handle-target{
+        @apply bg-blue-600;
+    }
+    .handle-source{
+        @apply bg-red-600;
+    }
+    .sidebar-item{
+        @apply h-20 w-full border-b px-2 md:px-12 pb-2 border-black cursor-pointer;
+    }
+    .sidebar-item-img{
+        @apply max-h-full max-w-full mx-auto;
+    }
+}
