--- a/React Flow Logic Gates/src/index.css
+++ b/React Flow Logic Gates/src/index.css
@@ -16,7 +16,7 @@
         @apply h-20 w-full border-b px-2 md:px-12 pb-2 border-black cursor-pointer;
     }
     .sidebar-item-img{
-        @apply max-h-full max-w-full mx-auto touch-none;
+        @apply max-h-full max-w-full mx-auto !touch-none;
     }
 }
 
